# TCC

./: .gitignore  README.md  data.txt  data_anal.py  go_to_pos.sh
src/: .rosinstall  .rosinstall.bak
src/centroid_tracker/: .gitignore  CMakeLists.txt  main.cpp  package.xml
src/centroid_tracker/scripts/: data.txt  oil_spill_model.py
src/drone/: CMakeLists.txt  package.xml
src/drone/include/: battery.hpp  drone.hpp  spill_tracker.hpp
src/drone/launch/: droneOnly.launch
src/drone/src/: drone_main.cpp  follow_target.cpp  spill_tracker.cpp  square.cpp
src/drone/worlds/: myWorld.world
src/iq_gnc/: CMakeLists.txt
src/iq_gnc/include/: gnc_functions.hpp
src/iq_gnc/src/: square.cpp
src/iq_sim/scripts/: startsitl.sh
src/ocean_models/: CMakeLists.txt  package.xml
src/ocean_models/launch/: ocean_world.launch  oil_world.launch
src/ocean_models/models/ocean_waves/materials/programs/: GerstnerWaves.frag
src/ocean_models/models/oil_waves/: model.sdf
src/ocean_models/models/oil_waves/materials/programs/: GerstnerWaves.frag  GerstnerWaves.vert
src/ocean_models/models/oil_waves/materials/scripts/: waves.material
src/ocean_models/worlds/: oil_ocean.world
src/oil_detection/: README.md  enhance_dataset.py  haralick.py  neural_net.py  segmentation.py  test.py  thermal_segmentation.py
